Fix table overflow on spec

--- a/assets/css/spec.scss
+++ b/assets/css/spec.scss
@@ -4,9 +4,11 @@
 ul {
   @apply list-disc ml-8;
 }
-table, th, td {
-  @apply w-full;
+th, td {
   @apply border px-3 py-1;
+}
+table {
+  @apply block overflow-x-auto;
 }
 tr {
   @apply even:bg-gray-50;
@@ -17,12 +19,14 @@ p {
 code {
   @apply bg-gray-100 p-1;
 }
+h3, h4 > code {
+  @apply font-semibold p-1;
+}
 h3 > code {
-  @apply text-xl font-semibold p-1;
+  @apply text-xl;
 }
 pre > code {
-  @apply p-4;
-  @apply max-w-fit;
+  @apply p-4 overflow-x-auto block;
 }
 h1, h2 {
   @apply border-b pb-3;
